--- a/site/templates/navbar-admin.twig
+++ b/site/templates/navbar-admin.twig
@@ -13,6 +13,7 @@
                 <li><a href="{{ path_for('index-admin') }}">Ajout Utilisateur</a></li>
                 <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
                 <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
+                <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
