--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -23,11 +23,10 @@
                 </select>
             </label>
             <label for="classe">
-                <select name="classe" id="classe" >
+                <select name="classe" id="classe" onchange="ajaxExportDataGetPlanning()">
                     <option value="0" disabled>Sélectionner Classe</option>
                 </select>
             </label>
-            <input type="button" value="Télécharger" name="Télécharger" id="Télécharger" onclick="ajaxExportDataGetPlanning()">
         </form>
         <div id="resultat">
         </div>
