--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -24,7 +24,7 @@
             </label>
             <label for="classe">
                 <select name="classe" id="classe" onchange="ajaxExportDataGetPlanning()">
-                    <option value="0" disabled>Sélectionner Classe</option>
+                    <option value="0" >Sélectionner Classe</option>
                 </select>
             </label>
         </form>
