token recover+pb layout

--- a/site/templates/layout.twig
+++ b/site/templates/layout.twig
@@ -16,6 +16,7 @@
                   crossorigin="anonymous">
             {{ m.css("bootflat.min.css") }}
             {{ m.css("bootflat.css") }}
+            {{ m.css("style.css") }}
         {% endblock %}
     {% endblock %}
 </head>
