--- a/site/templates/pages/newPassword.twig
+++ b/site/templates/pages/newPassword.twig
@@ -1,18 +1,15 @@
 {% extends "layout.twig" %}
 {% import "macro.twig" as m %}
 
-{% block css %}
-    {{ parent() }}
-{% endblock %}
-
 {% block title %}
     Nouveau mot de passe
 {% endblock %}
 
 {% block body %}
     {{ include('navbar.twig') }}
-
-    <form role="form" action="{{ path_for('recoverToken.post',{'token':token} ) }}" method="post">
+<div class="container firstContainer ">
+    <div class="row jumbotron">
+    <form role="form" action="{{ path_for('recoverToken.post',{'token':token} ) }}" method="post" class="jumbotron-contents">
         <fieldset>
             <div class="form-group">
                 <input class="form-control" placeholder="mot de passe" name="password" type="password" autofocus>
@@ -29,8 +26,10 @@
     {% if statut == "motDePasseDifferent" %}
         <p>Les mots de passes saisie ne correspondent pas</p>
     {% elseif statut =="ok" %}
-        <p>mot de passe modifié, rendez vous sur la page de connexion pour le modifier</p>
+        <p>mot de passe modifié, rendez vous sur la page de connexion </p>
     {% elseif statut == "tokenAbsent" %}
         <p>token inexistant</p>
     {% endif %}
+    </div>
+</div>
 {% endblock %}
