--- a/site/templates/pages/classe-admin.twig
+++ b/site/templates/pages/classe-admin.twig
@@ -30,7 +30,7 @@
                     <form role="form" action="" method="post">
                         <fieldset>
                             <div class="form-group">
-                                <span class="label label-primary col-md-12 center-block info">Ajout Classe</span>
+                                <span class="label label-primary col-md-12 center-block info">Ajouter une Classe</span>
                                 <input class="form-control formWeb" placeholder="Nom Classe" name="nom_classe" type="text"  >
                                 <input class="form-control formWeb" placeholder="2017" name="annee" type="text"   >
                                 <input class="form-control formWeb" placeholder="Nom Enseignant" name="nom_enseignant" type="text" >
