--- a/site/templates/pages/enfant-admin.twig
+++ b/site/templates/pages/enfant-admin.twig
@@ -30,7 +30,7 @@
                     <form role="form" action="" method="post">
                         <fieldset>
                             <div class="form-group">
-                                <span class="label label-primary col-md-12 center-block info">Ajout Enfant</span>
+                                <span class="label label-primary col-md-12 center-block info">Ajouter un Enfant</span>
                                 <input class="form-control formWeb" placeholder="Nom" name="nom_enfant" type="text"  >
                                 <input class="form-control formWeb" placeholder="Prenom" name="prenom_enfant" type="text"   >
                                 <input class="form-control formWeb" placeholder="Date de naissance: 2017-05-24" name="date_naissance_enfant" type="date" >
