fix pages contact

--- a/site/templates/pages/newPassword.twig
+++ b/site/templates/pages/newPassword.twig
@@ -26,7 +26,7 @@
     {% if statut == "motDePasseDifferent" %}
         <p>Les mots de passes saisie ne correspondent pas</p>
     {% elseif statut =="ok" %}
-        <p>mot de passe modifié, rendez vous sur la page de connexion </p>
+        <p>mot de passe modifié, rendez vous sur la page de <a href="{{ path_for('login.get') }}">connexion</a> </p>
     {% elseif statut == "tokenAbsent" %}
         <p>token inexistant</p>
     {% endif %}
