--- a/site/templates/pages/contact.twig
+++ b/site/templates/pages/contact.twig
@@ -18,8 +18,22 @@
                     <div class="col-md-4">
 
                     </div>
-
                     <div class="col-md-4">
+                        {% if errors %}
+                            <div class="alert alert-danger">
+                                {% for error in errors %}
+                                    <div class="text">
+                                        {{ error }}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        {% elseif valid %}
+                            <div class="alert alert-success firstContainer">
+                                <div class="text">
+                                    {{ valid }}
+                                </div>
+                            </div>
+                        {% endif %}
                         <form role="form" action="{{ path_for('contact.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
@@ -41,7 +55,7 @@
                                 <div class="form-group">
                                     Objet:
                                     <input class="form-control" placeholder="Raison de ce message" name="objet"
-                                           type="text" required >
+                                           type="text" required>
                                 </div>
 
                                 <div class="form-group">
