--- a/site/templates/pages/contact.twig
+++ b/site/templates/pages/contact.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    Contactez
+    Nous-contacter - JIS
 {% endblock %}
 
 {% block body %}
@@ -28,24 +28,24 @@
                         <form role="form" action="{{ path_for('contact.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    Données de contact: Nom-Prénom-Mail
+                                    Données de contact : Nom-Prénom-Mail
                                     <input class="form-control formWeb" placeholder="Nom" name="nom"  type="text" value="{{ infoUtilisateur.nom_rl | capitalize }}" required autofocus>
                                     <input class="form-control formWeb" placeholder="Prenom" name="prenom" type="text" value="{{ infoUtilisateur.prenom_rl | capitalize }}" required autofocus>
                                     <input class="form-control formWeb" placeholder="E-mail" name="email" type="email"  value="{{ infoUtilisateur.adresse_mail_rl }}" required autofocus>
                                 </div>
 
                                 <div class="form-group">
-                                    Objet:
+                                    Objet :
                                     <input class="form-control" placeholder="Raison de ce message" name="objet" type="text" required autofocus>
                                 </div>
 
                                 <div class="form-group">
-                                    Votre message:
+                                    Votre message :
                                     <textarea class="form-control" placeholder="Votre message" name="message" rows="6"></textarea>
                                 </div>
 
                                 <div class="form-group">
-                                    <button class="btn btn-lg btn-success btn-block" type="submit">Envoyez</button>
+                                    <button class="btn btn-lg btn-success btn-block" type="submit">Envoyer</button>
                                 </div>
 
                             </fieldset>
