--- a/site/templates/navbar-admin.twig
+++ b/site/templates/navbar-admin.twig
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://www.jis-lacrau.com/">
+            <a class="navbar-brand" href="{{ path_for('index-admin') }}">
                 <img src="{{ m.img('JIS_couleur_détouré.gif') }}" class="img-rounded" alt="Logo" width="30" height="30"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
