--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://www.jis-lacrau.com/"><img src="{{ m.img('JIS_couleur_détouré.gif') }}" class="img-rounded" alt="Logo" width="30" height="30"></a>
+            <a class="navbar-brand" href="{{ path_for('index') }}"><img src="{{ m.img('JIS_couleur_détouré.gif') }}" class="img-rounded" alt="Logo" width="30" height="30"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
