--- a/site/templates/pages/admin/index-admin.twig
+++ b/site/templates/pages/admin/index-admin.twig
@@ -1,5 +1,8 @@
 {% extends "layout.twig" %}
 {% import "macro.twig" as m %}
+{% block title %}
+    Index
+{% endblock %}
 
 {% block body %}
     {{ include('navbar-admin.twig') }}
