#33:refactoring nav_bar

--- a/site/templates/layout.twig
+++ b/site/templates/layout.twig
@@ -22,7 +22,7 @@
 </head>
 <body>
 {% block body %}
-    <p>du contenu</p>
+    {{ include('navbar.twig') }}
 {% endblock %}
 <footer class="container-fluid text-center">
     {% block footer %}
