--- a/site/templates/pages/admin/adminRegeneration.twig
+++ b/site/templates/pages/admin/adminRegeneration.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
     <div class="container firstContainer">
         <div class="row content">
             <div class="jumbotron">
