--- a/site/templates/pages/admin/importData.twig
+++ b/site/templates/pages/admin/importData.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar-admin.twig') }}
+    {{ parent() }}
     <div class="container">
         <form  role="form" class="firstContainer" enctype="multipart/form-data" action="{{ path_for('importData.post') }}" method="post">
             <fieldset>
