--- a/site/templates/pages/admin/login-admin.twig
+++ b/site/templates/pages/admin/login-admin.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 
     <div class="container firstContainer">
 
