--- a/site/templates/pages/admin/newPassword-admin.twig
+++ b/site/templates/pages/admin/newPassword-admin.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 
     <form role="form" action="{{ path_for('recoverToken-admin.post',{'token':token} ) }}" method="post">
         <fieldset>
