--- a/site/templates/pages/admin/utilisateur-enfant.twig
+++ b/site/templates/pages/admin/utilisateur-enfant.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar-admin.twig') }}
+    {{ parent() }}
     <div class="container firstContainer">
         {% if errors %}
             <div class="alert alert-danger firstContainer">
