--- a/site/templates/pages/index.twig
+++ b/site/templates/pages/index.twig
@@ -11,7 +11,7 @@ Votre compte de responsable légal - JIS
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 
     <div class="container-fluid text-center firstContainer lastContainer" >
 
