--- a/site/templates/pages/login.twig
+++ b/site/templates/pages/login.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 
     <div class="container firstContainer">
 
