--- a/site/templates/pages/newPassword.twig
+++ b/site/templates/pages/newPassword.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 <div class="container firstContainer ">
     <div class="row jumbotron">
     <form role="form" action="{{ path_for('recoverToken.post',{'token':token} ) }}" method="post" class="jumbotron-contents">
