--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -1,12 +1,29 @@
 {% import "macro.twig" as m %}
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                {% if infoUtilisateur.id_admin %}
+                <a class="navbar-brand" href="{{ path_for('index-admin') }}">
+                    <img src="{{ m.img('JIS_couleur_détouré.gif') }}" class="img-rounded" alt="Logo" width="30" height="30"></a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ path_for('index-admin') }}">Ajout Utilisateur</a></li>
+                    <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
+                    <li><a href="{{ path_for('utilisateur-enfant') }}">Associer</a></li>
+                    <li><a href="{{ path_for('index') }}">Accueil</a></li>
+                </ul>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ path_for('logout-admin') }}"><span class="glyphicon glyphicon-log-out"></span> Déconnexion</a></li>
+                </ul>
+                {% else %}
             <a class="navbar-brand" href="{{ path_for('index') }}"><img src="{{ m.img('JIS_couleur_détouré.gif') }}" class="img-rounded" alt="Logo" width="30" height="30"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -21,6 +38,7 @@
                 {% else %}
                 <li><a href="{{ path_for('login.get') }}"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
                 {% endif  %}
+                {% endif %}
             </ul>
         </div>
     </div>
