--- a/site/templates/pages/contact.twig
+++ b/site/templates/pages/contact.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block body %}
-    {{ include('navbar.twig') }}
+    {{ parent() }}
 
     <div class="container-fluid text-center firstContainer lastContainer">
         <div class="row">
