--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -23,10 +23,11 @@
                 </select>
             </label>
             <label for="classe">
-                <select name="classe" id="classe" onchange="ajaxExportDataGetPlanning()">
+                <select name="classe" id="classe"">
                     <option value="0" >Sélectionner Classe</option>
                 </select>
             </label>
+            <button type="button" onclick="ajaxExportDataGetPlanning()">Valider</button>
         </form>
         <div id="resultat">
         </div>
