--- a/site/templates/navbar-admin.twig
+++ b/site/templates/navbar-admin.twig
@@ -14,6 +14,7 @@
                 <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
                 <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
                 <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
+                <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
