--- a/site/templates/error/404.twig
+++ b/site/templates/error/404.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div style="text-align: center">
     <h4>ERREUR 404</h4>
-    <p>L'URL demandé n'a pas été trouvé sur le serveur</p>
-    <a href="{{ path_for('index') }}">index</a>
+    <p>L'adresse demandée n'a pas été trouvée sur le serveur.</p>
+    <a href="{{ path_for('index') }}">Index</a>
     </div>
 {% endblock %}
