--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -13,32 +13,37 @@
 {% block body %}
     {{ include('navbar.twig') }}
     <div class="firstContainer container">
-        <div class="col-md-4">
-        <form enctype="multipart/form-data" class="firstContainer" method="post">
-            <fieldset>
-                <div class="form-group">
-                    <select name="ecole" id="ecole" class="selecter_3 selecter-element"
-                            onchange="ajaxExportDataGetClasses()">
-                        <option value="0">Sélectionner Ecole</option>
-                        {% for ecole in listeEcole %}
-                            <option value={{ ecole['nom_ecole'] }}>{{ ecole['nom_ecole'] }}</option>
-                        {% endfor %}
-                    </select>
-                        <select name="classe" id="classe" class="selecter_3 selecter-element">
-                            <option value="0">Sélectionner Classe</option>
-                        </select>
-                    <button class="btn" type="button"
-                            onclick="ajaxExportDataGetPlanning()">
-                        Valider
-                    </button>
+        <div class="row content">
+            <div class="jumbotron">
+                <div class="jumbotron-contents">
+                    <form enctype="multipart/form-data" class="firstContainer" method="post">
+                        <fieldset>
+                            <div class="form-group">
+                                <select name="ecole" id="ecole" class="selecter_3 selecter-element"
+                                        onchange="ajaxExportDataGetClasses()">
+                                    <option value="0">Sélectionner Ecole</option>
+                                    {% for ecole in listeEcole %}
+                                        <option value={{ ecole['nom_ecole'] }}>{{ ecole['nom_ecole'] }}</option>
+                                    {% endfor %}
+                                </select>
+                                <select name="classe" id="classe" class="selecter_3 selecter-element">
+                                    <option value="0">Sélectionner Classe</option>
+                                </select>
+                                <button class="btn" type="button"
+                                        onclick="ajaxExportDataGetPlanning()">
+                                    Valider
+                                </button>
+                            </div>
+                        </fieldset>
+                    </form>
+
+
+                    <div id="resultat">
+
+                    </div>
                 </div>
-            </fieldset>
-        </form>
 
-
-        <div id="resultat" >
-
-        </div>
+            </div>
         </div>
     </div>
 {% endblock %}
