--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -14,11 +14,14 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
+                    <li><a href="{{ path_for('index') }}">Accueil</a></li>
+                    <li><a href="{{ path_for('contact.get') }}">Contact</a></li>
                     <li><a href="{{ path_for('index-admin') }}">Ajout Utilisateur</a></li>
                     <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
                     <li><a href="{{ path_for('utilisateur-enfant') }}">Associer</a></li>
-                    <li><a href="{{ path_for('index') }}">Accueil</a></li>
-                    <li><a href="{{ path_for('contact.get') }}">Contact</a></li>
+                    <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
+                    <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
+                    <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
