--- a/site/templates/pages/admin/login-admin.twig
+++ b/site/templates/pages/admin/login-admin.twig
@@ -6,12 +6,8 @@
 {% endblock %}
 
 {% block body %}
-    {{ parent() }}
-
     <div class="container firstContainer">
-
         <span class="label label-primary col-md-4 center-block info">Administrateur</span>
-
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
@@ -19,7 +15,6 @@
                         <h3 class="panel-title">Connexion</h3>
                     </div>
                     <div class="panel-body">
-
                         {% if errors %}
                             <div class="alert alert-danger">
                                 {% for error in errors %}
@@ -32,23 +27,18 @@
                         <form role="form" action="{{ path_for('login-admin.post') }}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" value="{{ old }}" required autofocus>
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email"
+                                           value="{{ old }}" required autofocus>
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Mot de passe" name="password" type="password" required>
+                                    <input class="form-control" placeholder="Mot de passe" name="password"
+                                           type="password" required>
                                 </div>
                                 <div class="checkbox">
                                     <label>
                                         <input type="checkbox" name="remember"> Se souvenir de moi
                                     </label>
                                 </div>
-                                <!-- <div class="col-md-7">
-                                     <div class="checkbox">
-                                         <div class="icheckbox_flat " style="position: relative;"><input type="checkbox" id="flat-checkbox-1" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div>
-                                         <label for="flat-checkbox-1">Se souvenir de moi</label>
-                                     </div>
-                                 </div> -->
-                                <!-- Change this to a button or input when using this as a form -->
                                 <div class="form-group">
                                     <button class="btn btn-lg btn-success btn-block" type="submit">Connexion</button>
                                 </div>
