--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -22,6 +22,7 @@
                     <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
                     <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
                     <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
+                    <li><a href="{{ path_for('regenerer') }}">Modifier un compte</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
