Ajout recherche calendrier enfant

--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -23,6 +23,7 @@
                     <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
                     <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
                     <li><a href="{{ path_for('regenerer') }}">Modifier un compte</a></li>
+                    <li><a href="{{ path_for('chercherEnfant') }}">Planning Enfant</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
