--- a/site/templates/pages/admin/modifierRL.twig
+++ b/site/templates/pages/admin/modifierRL.twig
@@ -81,7 +81,7 @@
             }).done(function (data) {
                 console.log(data);
                 $("#lien").empty();
-                $("#lien").append("<a href=\"../../"+data+"\" target='_blank'>lien de telechargement</a>");
+                $("#lien").append("<a href=\"../../"+data+"\" class='btn btn-success' target='_blank'>Lien de téléchargement</a>");
             });
         }
     </script>
