--- a/site/templates/pages/compte.twig
+++ b/site/templates/pages/compte.twig
@@ -30,8 +30,8 @@
                         <fieldset>
                             <div class="form-group">
                                 <span class="label label-primary col-md-12 center-block info">Modifier son mot de passe</span>
-                                <input class="form-control formWeb" placeholder="Nouveau mot de passe" name="new_pass" type="text"   >
-                                <input class="form-control formWeb" placeholder="Confirmer le mot de passe" name="confirm_new_pass" type="text" >
+                                <input class="form-control formWeb" placeholder="Nouveau mot de passe" name="new_pass" type="password"   >
+                                <input class="form-control formWeb" placeholder="Confirmer le mot de passe" name="confirm_new_pass" type="password" >
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-lg btn-success btn-block" type="submit">Envoyer</button>
