--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -19,11 +19,16 @@
                     <li><a href="{{ path_for('index-admin') }}">Ajout Utilisateur</a></li>
                     <li><a href="{{ path_for('importData.get') }}">Importer</a></li>
                     <li><a href="{{ path_for('utilisateur-enfant') }}">Associer</a></li>
-                    <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
-                    <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
-                    <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
-                    <li><a href="{{ path_for('regenerer') }}">Modifier un compte</a></li>
-                    <li><a href="{{ path_for('chercherEnfant') }}">Planning Enfant</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Autres options <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path_for('classe-admin.get') }}">Classe</a></li>
+                            <li><a href="{{ path_for('enfant-admin.get') }}">Enfant</a></li>
+                            <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
+                            <li><a href="{{ path_for('admin.regenerer') }}">Modifier un compte</a></li>
+                            <li><a href="{{ path_for('chercherEnfant') }}">Planning Enfant</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
