--- a/site/templates/pages/admin/activite-admin.twig
+++ b/site/templates/pages/admin/activite-admin.twig
@@ -24,7 +24,7 @@
                     <form role="form" action="" method="post">
                         <fieldset>
                             <div class="form-group">
-                                <span class="label label-primary col-md-12 center-block info">Ajouter un Enfant</span>
+                                <span class="label label-primary col-md-12 center-block info">Ajouter une activité</span>
                                 <input class="form-control formWeb" placeholder="Nom Activité" name="intitule" type="text"  >
                                 <label> Couleur dans le calendrier
                                     <select name="classname" class="selecter_3">
