--- a/site/templates/pages/exportData.twig
+++ b/site/templates/pages/exportData.twig
@@ -18,6 +18,7 @@
                 <div class="jumbotron-contents">
                     <form enctype="multipart/form-data" class="firstContainer" method="post">
                         <fieldset>
+                            <h5>Exporter les données pour aujourd'hui :</h5>
                             <div class="form-group">
                                 <select name="ecole" id="ecole" class="selecter_3 selecter-element"
                                         onchange="ajaxExportDataGetClasses()">
