--- a/site/templates/navbar.twig
+++ b/site/templates/navbar.twig
@@ -27,6 +27,7 @@
                             <li><a href="{{ path_for('activite-admin.get') }}">Activite</a></li>
                             <li><a href="{{ path_for('admin.regenerer') }}">Modifier un compte</a></li>
                             <li><a href="{{ path_for('chercherEnfant') }}">Planning Enfant</a></li>
+                            <li><a href="{{ path_for('exportData.get') }}">Exporter données</a></li>
                         </ul>
                     </li>
                 </ul>
